[package]
name = "rmr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coordinator"
path = "bin/coordinator.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"]  }
futures = "0.3.18"
uuid = { version = "0.4", features = ["v4"] }
structopt = "0.3.25"

[build-dependencies]
tonic-build = "0.6"
